# 3615meteo

./: .gitignore  .python-version  README.md  doc_windmaps_meteologix.md  index.mustache  meteo.mustache  pyproject.toml
.github/workflows/: build-bulletins-schedule.yml
docs/: BMRCOTE-01-01.xml  BMRCOTE-01-02.xml  BMRCOTE-01-03.xml  BMRCOTE-01-04.xml  BMRCOTE-01-05.xml  BMRCOTE-02-01.xml  BMRCOTE-02-02.xml  BMRCOTE-02-03.xml  BMRCOTE-02-04.xml  BMSCOTE-02.json  CNAME  api.html  bulletin-BMRCOTE-01-01.html  bulletin-BMRCOTE-01-02.html  bulletin-BMRCOTE-01-03.html  bulletin-BMRCOTE-01-04.html  bulletin-BMRCOTE-01-05.html  bulletin-BMRCOTE-02-01.html  bulletin-BMRCOTE-02-02.html  bulletin-BMRCOTE-02-03.html  bulletin-BMRCOTE-02-04.html  bulletin-special-BMSCOTE-01.html  bulletin-special-BMSCOTE-02.html  index.html
docs/api/: bulletins_cotiers.json  bulletins_speciaux.json
docs/raw/: BMRCOTE-01-01.xml  BMRCOTE-01-02.xml  BMRCOTE-01-03.xml  BMRCOTE-01-04.xml  BMRCOTE-01-05.xml  BMRCOTE-02-01.xml  BMRCOTE-02-02.xml  BMRCOTE-02-03.xml  BMRCOTE-02-04.xml  BMSCOTE-01.json  BMSCOTE-02.json
lib/: build.py  local_server.py  meteofrance.py  reverse-auth.js  scrap_meteofrance.py
meteo/lib/: renderer.py
meteo/meteofrance/: bulletin_cotier.py  bulletin_special.py  bulletins_cotiers.csv  fetch.py
meteo/scripts/: build.py  local_server.py
meteo/templates/: _bulletin_special_warning.html.jinja  _footer.html.jinja  (+7 more)
notebooks/: parse.ipynb  scrap.ipynb
static_assets/: meteologix.js
tests/: bulletin_cote_1.xml  bulletin_cote_broken_2.xml  test_parse_bulletin_cote_xml.py
(+18 files in other folders)
