[tool.poetry]
name = "adipasquale"
version = "0.1.0"
description = ""
authors = ["Adrien Di Pasquale <adrien@dipasquale.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
cssselect = "^1.1.0"
Js2Py = "^0.71"
pystache = "^0.5.4"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.11"
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
